--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Do You Wanna Go Out With Me?</h1>
     </div>
 
-    <div class="image"><img src="images/giphy.gif" alt="" srcset="">
+    <div class="image"><img src="giphy.gif" alt="" srcset="">
     </div>
 
     <div class="buttons">
