--- a/yes.html
+++ b/yes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="heading">yeeyyyyy!</div>
-    <div class="image"><img src="images/giphy (1).gif" alt="" srcset=""></div>
+    <div class="image"><img src="giphy (1).gif" alt="" srcset=""></div>
     
 </body>
 </html>
